--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -2,7 +2,7 @@ version: 2
 jobs: # we now have TWO jobs, so that a workflow can coordinate them!
   one: # This is our first job.
     docker: # it uses the docker executor
-      - image: circleci/golang:1.15.8
+      - image: circleci/ruby:2.4.1 # specifically, a docker image with ruby 2.4.1
         auth:
           username: mydockerhub-user
           password: $DOCKERHUB_PASSWORD  # context / project UI env-var reference
@@ -10,39 +10,40 @@ jobs: # we now have TWO jobs, so that a workflow can coordinate them!
     steps:
       - checkout # this pulls code down from GitHub
       - run: echo "A first hello" # This prints "A first hello" to stdout.
-      - run: sleep 588 # a command telling the job to "sleep" for 25 seconds.
-      - run: sleep 588 # a command telling the job to "sleep" for 25 seconds.
-      - run: sleep 588 # a command telling the job to "sleep" for 25 seconds.
-      - run: sleep 588 # a command telling the job to "sleep" for 25 seconds.
-      - run: sleep 588 # a command telling the job to "sleep" for 25 seconds.
-      - run: sleep 588 # a command telling the job to "sleep" for 25 seconds.
-      - run: sleep 588 # a command telling the job to "sleep" for 25 seconds.
-      - run: sleep 588 # a command telling the job to "sleep" for 25 seconds.
-      - run: sleep 588 # a command telling the job to "sleep" for 25 seconds.
-      - run: sleep 588 # a command telling the job to "sleep" for 25 seconds.
-      - run: sleep 588 # a command telling the job to "sleep" for 25 seconds.
-      - run: sleep 588 # a command telling the job to "sleep" for 25 seconds.
-      - run: sleep 588 # a command telling the job to "sleep" for 25 seconds.
-      - run: sleep 588 # a command telling the job to "sleep" for 25 seconds.
-      - run: sleep 588 # a command telling the job to "sleep" for 25 seconds.
-      - run: sleep 588 # a command telling the job to "sleep" for 25 seconds.
-      - run: sleep 588 # a command telling the job to "sleep" for 25 seconds.
-      - run: sleep 588 # a command telling the job to "sleep" for 25 seconds.
-      - run: sleep 588 # a command telling the job to "sleep" for 25 seconds.
-      - run: sleep 588 # a command telling the job to "sleep" for 25 seconds.
-      - run: sleep 588 # a command telling the job to "sleep" for 25 seconds.
-      - run: sleep 588 # a command telling the job to "sleep" for 25 seconds.
-      - run: sleep 588 # a command telling the job to "sleep" for 25 seconds.
-      - run: sleep 588 # a command telling the job to "sleep" for 25 seconds.
-      - run: sleep 588 # a command telling the job to "sleep" for 25 seconds.
-      - run: sleep 588 # a command telling the job to "sleep" for 25 seconds.
-      - run: sleep 588 # a command telling the job to "sleep" for 25 seconds.
-      - run: sleep 588 # a command telling the job to "sleep" for 25 seconds.
-      - run: sleep 588 # a command telling the job to "sleep" for 25 seconds.
-      - run: sleep 588 # a command telling the job to "sleep" for 25 seconds.
+      - run: sleep 25 # a command telling the job to "sleep" for 25 seconds.
+      - run: sleep 450 # and then sleep for 15 seconds.
+      - run: sleep 450 # and then sleep for 15 seconds.
+      - run: sleep 450 # and then sleep for 15 seconds.
+      - run: sleep 450 # and then sleep for 15 seconds.
+      - run: sleep 450 # and then sleep for 15 seconds.
+      - run: sleep 450 # and then sleep for 15 seconds.
+      - run: sleep 450 # and then sleep for 15 seconds.
+      - run: sleep 450 # and then sleep for 15 seconds.
+      - run: sleep 450 # and then sleep for 15 seconds.
+      - run: sleep 450 # and then sleep for 15 seconds.
+      - run: sleep 450 # and then sleep for 15 seconds.
+      - run: sleep 450 # and then sleep for 15 seconds.
+      - run: sleep 450 # and then sleep for 15 seconds.
+      - run: sleep 450 # and then sleep for 15 seconds.
+      - run: sleep 450 # and then sleep for 15 seconds.
+      - run: sleep 450 # and then sleep for 15 seconds.
+      - run: sleep 450 # and then sleep for 15 seconds.
+      - run: sleep 450 # and then sleep for 15 seconds.
+      - run: sleep 450 # and then sleep for 15 seconds.
+      - run: sleep 450 # and then sleep for 15 seconds.
+      - run: sleep 450 # and then sleep for 15 seconds.
+      - run: sleep 450 # and then sleep for 15 seconds.
+      - run: sleep 450 # and then sleep for 15 seconds.
+      - run: sleep 450 # and then sleep for 15 seconds.
+      - run: sleep 450 # and then sleep for 15 seconds.
+      - run: sleep 450 # and then sleep for 15 seconds.
+      - run: sleep 450 # and then sleep for 15 seconds.
+      - run: sleep 450 # and then sleep for 15 seconds.
+      - run: sleep 450 # and then sleep for 15 seconds.
+      - run: sleep 450 # and then sleep for 15 seconds.
   two: # This is our second job.
     docker: # it runs inside a docker image, the same as above.
-      - image: circleci/golang:1.15.8
+      - image: circleci/ruby:2.4.1
         auth:
           username: mydockerhub-user
           password: $DOCKERHUB_PASSWORD  # context / project UI env-var reference
@@ -50,36 +51,37 @@ jobs: # we now have TWO jobs, so that a workflow can coordinate them!
       - checkout
       - run: echo "A more familiar hi" # We run a similar echo command to above.
       - run: sleep 15 # and then sleep for 15 seconds.
-      - run: sleep 588 # a command telling the job to "sleep" for 25 seconds.
-      - run: sleep 588 # a command telling the job to "sleep" for 25 seconds.
-      - run: sleep 588 # a command telling the job to "sleep" for 25 seconds.
-      - run: sleep 588 # a command telling the job to "sleep" for 25 seconds.
-      - run: sleep 588 # a command telling the job to "sleep" for 25 seconds.
-      - run: sleep 588 # a command telling the job to "sleep" for 25 seconds.
-      - run: sleep 588 # a command telling the job to "sleep" for 25 seconds.
-      - run: sleep 588 # a command telling the job to "sleep" for 25 seconds.
-      - run: sleep 588 # a command telling the job to "sleep" for 25 seconds.
-      - run: sleep 588 # a command telling the job to "sleep" for 25 seconds.
-      - run: sleep 588 # a command telling the job to "sleep" for 25 seconds.
-      - run: sleep 588 # a command telling the job to "sleep" for 25 seconds.
-      - run: sleep 588 # a command telling the job to "sleep" for 25 seconds.
-      - run: sleep 588 # a command telling the job to "sleep" for 25 seconds.
-      - run: sleep 588 # a command telling the job to "sleep" for 25 seconds.
-      - run: sleep 588 # a command telling the job to "sleep" for 25 seconds.
-      - run: sleep 588 # a command telling the job to "sleep" for 25 seconds.
-      - run: sleep 588 # a command telling the job to "sleep" for 25 seconds.
-      - run: sleep 588 # a command telling the job to "sleep" for 25 seconds.
-      - run: sleep 588 # a command telling the job to "sleep" for 25 seconds.
-      - run: sleep 588 # a command telling the job to "sleep" for 25 seconds.
-      - run: sleep 588 # a command telling the job to "sleep" for 25 seconds.
-      - run: sleep 588 # a command telling the job to "sleep" for 25 seconds.
-      - run: sleep 588 # a command telling the job to "sleep" for 25 seconds.
-      - run: sleep 588 # a command telling the job to "sleep" for 25 seconds.
-      - run: sleep 588 # a command telling the job to "sleep" for 25 seconds.
-      - run: sleep 588 # a command telling the job to "sleep" for 25 seconds.
-      - run: sleep 588 # a command telling the job to "sleep" for 25 seconds.
-      - run: sleep 588 # a command telling the job to "sleep" for 25 seconds.
-      - run: sleep 588 # a command telling the job to "sleep" for 25 seconds.
+      - run: sleep 450 # and then sleep for 15 seconds.
+      - run: sleep 450 # and then sleep for 15 seconds.
+      - run: sleep 450 # and then sleep for 15 seconds.
+      - run: sleep 450 # and then sleep for 15 seconds.
+      - run: sleep 450 # and then sleep for 15 seconds.
+      - run: sleep 450 # and then sleep for 15 seconds.
+      - run: sleep 450 # and then sleep for 15 seconds.
+      - run: sleep 450 # and then sleep for 15 seconds.
+      - run: sleep 450 # and then sleep for 15 seconds.
+      - run: sleep 450 # and then sleep for 15 seconds.
+      - run: sleep 450 # and then sleep for 15 seconds.
+      - run: sleep 450 # and then sleep for 15 seconds.
+      - run: sleep 450 # and then sleep for 15 seconds.
+      - run: sleep 450 # and then sleep for 15 seconds.
+      - run: sleep 450 # and then sleep for 15 seconds.
+      - run: sleep 450 # and then sleep for 15 seconds.
+      - run: sleep 450 # and then sleep for 15 seconds.
+      - run: sleep 450 # and then sleep for 15 seconds.
+      - run: sleep 450 # and then sleep for 15 seconds.
+      - run: sleep 450 # and then sleep for 15 seconds.
+      - run: sleep 450 # and then sleep for 15 seconds.
+      - run: sleep 450 # and then sleep for 15 seconds.
+      - run: sleep 450 # and then sleep for 15 seconds.
+      - run: sleep 450 # and then sleep for 15 seconds.
+      - run: sleep 450 # and then sleep for 15 seconds.
+      - run: sleep 450 # and then sleep for 15 seconds.
+      - run: sleep 450 # and then sleep for 15 seconds.
+      - run: sleep 450 # and then sleep for 15 seconds.
+      - run: sleep 450 # and then sleep for 15 seconds.
+      - run: sleep 450 # and then sleep for 15 seconds.
+      - run: sleep 450 # and then sleep for 15 seconds.
 # Under the workflows: map, we can coordinate our two jobs, defined above.
 workflows:
   version: 2
